# rlx

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Justfile  README.md  clippy.toml  llms.txt
pyrlx/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  pyproject.toml
pyrlx/benches/: README.md  bench_vs_torch_jax.py
pyrlx/docs/: backends.md  quickstart.md
pyrlx/examples/: cross_backend_parity.py
pyrlx/src/: autodiff.rs  device.rs  dtype.rs  embed.rs  graph.rs  lib.rs  session.rs
pyrlx/tests/: conftest.py  test_check.py  test_dense_solve_f64.py  test_fft.py  test_ir_parity.py  test_smoke.py
rlx-autodiff/: Cargo.toml  README.md
rlx-autodiff/src/: autodiff.rs  autodiff_fwd.rs  fuse_splat.rs  legalize_reduce.rs  lib.rs  prepare_ad.rs  vmap.rs
rlx-autodiff/tests/: attention_backward.rs  attention_backward_gpu.rs  dequant_grouped_backward.rs  dequant_grouped_vmap.rs  fuse_splat_smoke.rs  mnist_pipeline.rs  tinyconv_graph.rs  training_backward.rs  training_backward_gpu.rs
rlx-bbo/: Cargo.toml  README.md
rlx-bbo/src/: cmaes.rs  flow_map.rs  lib.rs  q_guidance.rs  surrogate.rs  trajectory.rs  twin.rs
rlx-bench/: Cargo.toml  README.md
rlx-bench/examples/: bench_all.rs  bench_autodiff.rs  bench_fft.rs
rlx-bench/src/: lib.rs  patterns.rs
rlx-compile/: Cargo.toml  README.md
rlx-compile/src/: compiler.rs  const_fold.rs  dce.rs  dispatch_report.rs  fusion_pipeline.rs  hardening.rs  inspect.rs  legalize.rs  legalize_broadcast.rs  lib.rs  memory.rs  precision.rs  promote_params.rs  quant_propagate.rs  rewrite.rs  svg.rs  training_compile.rs
rlx-compile/tests/: dynamic.rs  hardening.rs  lir_stage_grad_errors.rs
rlx-cortexm/: Cargo.toml  Justfile  README.md
rlx-cortexm/firmware/: Cargo.toml  build.rs  memory.x
rlx-cortexm/src/: argmax.rs  conv2d.rs  dense.rs  lib.rs  maxpool.rs  model.rs  model_weights.rs  quant.rs  reference.rs  relu.rs
rlx-cortexm/tests/: mnist_debug.rs  mnist_e2e.rs  mnist_validate.rs  parity.rs
rlx-cortexm/tools/: compare_weights.py  mnist_client.py  setup.py  train_mnist.py
rlx-cortexm/trainer/: Cargo.toml  README.md
rlx-cpu/: Cargo.toml  DESIGN.md  README.md  build.rs
rlx-cpu/bench-configs/: cumsum.toml  sgemm.toml
rlx-cpu/benches/: cumsum.rs  sample.rs  sgemm.rs  tuned.rs
rlx-cpu/src/: arena.rs  asm_check.rs  attention_bwd.rs  autotune.rs  blas.rs  calibrate.rs  config.rs  cost.rs  dequant_cache.rs  dispatch.rs  executor.rs  gdn.rs  gguf_matmul.rs  kernel_config.rs  kernels.rs  lib.rs  llada2_gate.rs  lm_head.rs  moe_residency.rs  moe_topk_capture.rs  naive.rs  op_registry.rs  pool.rs  splat.rs  thunk.rs  thunk.rs.bak  tile.rs  training_bwd.rs  umap_knn.rs
rlx-cuda/: Cargo.toml  Dockerfile.compile-check  README.md  build.rs  check-compile.sh
rlx-cuda/cpp/: cpu_dispatch.cpp
rlx-cuda/examples/: bench_matmul.rs
rlx-cuda/src/: arena.rs  backend.rs  cpu_dispatch.rs  device.rs  fft_dispatch.rs  fft_host.rs  gdn_host.rs  gguf_gpu.rs  gguf_host.rs  lib.rs  llada2_gate_host.rs  sam_ops_host.rs  splat_host.rs  splat_native.rs  training_bwd_host.rs  umap_knn_host.rs  unfuse.rs
rlx-cuda/tests/: basic.rs  hip_cpu_validate.rs  smoke.rs
rlx-driver/: Cargo.toml  README.md
rlx-driver/src/: arena.rs  buffer.rs  collective.rs  device.rs  handle.rs  lib.rs  stream.rs  symmetric.rs
rlx-fdm/: Cargo.toml  README.md
rlx-fdm/data/: quad_mesh.json
rlx-fdm/examples/: constrained_arch.rs  inverse_design.rs
rlx-fdm/src/: constraints.rs  csr_spec.rs  equilibrium.rs  fuse.rs  geometry.rs  goals.rs  graph.rs  graph_sparse.rs  implicit.rs  iterative.rs  lbfgs.rs  lib.rs  loads.rs  losses.rs  mesh.rs  mir_opt.rs  network.rs  objective.rs  optimize.rs  parameters.rs  reference.rs  rlx_op.rs  slsqp.rs  solve.rs  sparse.rs  sparse_fast.rs  state.rs  structure.rs
rlx-fdm/tests/: anderson_accel.rs  arch_equilibrium.rs  constrained_opt.rs  face_loads.rs  fixed_coord_grad.rs  fused_autodiff_opt.rs  fused_e2e.rs  goals_extended.rs  implicit_grad.rs  io_arch_json.rs  io_mesh_json.rs  ir_dense_solve.rs  lbfgs_opt.rs  mesh_goals.rs  mir_opt_hook.rs  mir_sparse_autodiff.rs  mir_sparse_pcg.rs  nonlinear_adjoint.rs  nonlinear_iter.rs  parameters_opt.rs  pcg_adjoint.rs  residual_grad.rs  rlx_sparse_pcg.rs  slsqp_constraints.rs  sparse_fast_parity.rs  sparse_parity.rs  vault_dome.rs
rlx-flow/: Cargo.toml  DESIGN.md  README.md
rlx-flow/src/: composite.rs  context.rs  dsl.rs  escape.rs  execution.rs  extension.rs  flow.rs  layer.rs  lib.rs  plugin.rs  prelude.rs  profile.rs  recipe.rs  side.rs  stage.rs  stage_contract.rs  stage_interfaces.rs  stream.rs  value.rs  weight.rs
rlx-fpga/: Cargo.toml  README.md
rlx-fpga/src/: estimate.rs  ir.rs  lib.rs  model.rs  pack.rs  quant.rs  reference.rs  tune.rs  verilog.rs  weights.rs
rlx-fpga/tests/: emit_check.rs  ic_parallel.rs  ir_pipeline.rs  parallelism.rs  pipelined_mac.rs  ternary.rs  tuning.rs
rlx-fusion/: Cargo.toml  README.md
rlx-fusion/src/: control_flow.rs  fusion.rs  fusion_report.rs  lib.rs  limits.rs  lower_backward_ops.rs  lower_dot_general.rs  lower_logical_kernels.rs  lower_reduce_axes.rs  lower_vae_ops.rs  pass.rs  unfuse.rs
rlx-gguf/: Cargo.toml  README.md
rlx-gguf/examples/: inspect.rs
rlx-gguf/src/: lib.rs
rlx-gpu-kernels/: Cargo.toml  README.md
rlx-gpu-kernels/kernels/: argmax.cu  attention.cu  cast_f32_to_half.cu  compare.cu  conv1d.cu  conv2d.cu  conv3d.cu  conv_transpose2d.cu  copy.cu  dequant_gguf.cu  dequant_matmul.cu  expand.cu  fft.cu  gather.cu  (+15 more)
rlx-ir/: Cargo.toml  DESIGN-HIR.md  DESIGN.md  README-logical-kernels.md  README.md
rlx-linalg/: Cargo.toml  README.md
rlx-macros/: Cargo.toml  README.md
rlx-metal/: Cargo.toml  DESIGN.md  README.md
rlx-mlx/: Cargo.toml  README.md  build.rs
rlx-mlx-sys/: Cargo.toml  README.md  build.rs
rlx-models/: ADDING_A_MODEL.md  Cargo.toml  README.md
rlx-opt/: Cargo.toml  DESIGN.md  README.md
rlx-rl/: Cargo.toml  README.md  REFERENCE.md
rlx-rocm/: Cargo.toml  README.md  build.rs
rlx-runtime/: Cargo.toml  DESIGN.md  README.md
rlx-sparse/: Cargo.toml  README.md
rlx-splat/: Cargo.toml  README.md
(+885 files in other folders)
