[package]
name = "pyrlx"
version                = "0.2.2"
edition.workspace      = true
rust-version.workspace = true
description = "Python bindings for rlx — run RLX graphs and HF models on any RLX backend"
authors.workspace      = true
license.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
repository.workspace   = true
homepage.workspace     = true
documentation.workspace = true
# Not on crates.io: pyrlx is distributed via maturin → PyPI as
# Python wheels, not as a Rust library. Build from source with
# `maturin develop` or grab a wheel from the GitHub Releases page.
publish = false

[lib]
name = "pyrlx"
crate-type = ["cdylib", "rlib"]

[features]
# Backend selection mirrors rlx-runtime. Default = whatever's
# always available everywhere (cpu).
default = ["cpu"]

cpu             = ["rlx-runtime/cpu"]
blas-accelerate = ["rlx-runtime/blas-accelerate"]
blas-mkl        = ["rlx-runtime/blas-mkl"]
blas-openblas   = ["rlx-runtime/blas-openblas"]
metal           = ["rlx-runtime/metal"]
mlx             = ["rlx-runtime/mlx"]
gpu             = ["rlx-runtime/gpu"]
cuda            = ["rlx-runtime/cuda"]
rocm            = ["rlx-runtime/rocm"]

[dependencies]
pyo3      = { version = "0.22", features = ["extension-module", "abi3-py39"] }
numpy     = "0.22"

rlx-ir = { path = "../rlx-ir", version = "0.2.2" }
rlx-opt = { path = "../rlx-opt", version = "0.2.2" }
rlx-runtime = { path = "../rlx-runtime", version = "0.2.2", default-features = false }
[lints]
workspace = true
