[package]
name = "rlx-autodiff"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
description = "JAX-shaped transforms for RLX MIR — autodiff, JVP/HVP, vmap"
authors.workspace      = true
license.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
repository.workspace   = true
homepage.workspace     = true
documentation.workspace = true

[dependencies]
rlx-ir = { path = "../rlx-ir", version = "0.2.0" }
rlx-fusion = { path = "../rlx-fusion", version = "0.2.0" }

[dev-dependencies]
rlx-compile = { path = "../rlx-compile", version = "0.2.0" }
rlx-cpu = { path = "../rlx-cpu", version = "0.2.0" }
rlx-opt = { path = "../rlx-opt", version = "0.2.0" }
rlx-wgpu = { path = "../rlx-wgpu", version = "0.2.0" }
rlx-runtime = { path = "../rlx-runtime", version = "0.2.0", features = ["cpu", "gpu"] }

[features]
default = []
# `cargo test -p rlx-autodiff --features metal-verify attention_backward_gpu`
metal-verify = ["rlx-runtime/metal"]
# `cargo test -p rlx-autodiff --features cuda-verify attention_backward_gpu`
cuda-verify = ["rlx-runtime/cuda"]

[lints]
workspace = true
