[package]
name = "rlx-autodiff"
version                = "0.2.2"
edition.workspace      = true
rust-version.workspace = true
description = "JAX-shaped transforms for RLX MIR — autodiff, JVP/HVP, vmap"
authors.workspace      = true
license.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
repository.workspace   = true
homepage.workspace     = true
documentation.workspace = true

[dependencies]
rlx-ir = { path = "../rlx-ir", version = "0.2.2" }
rlx-fusion = { path = "../rlx-fusion", version = "0.2.2" }

[features]
default = []

[lints]
workspace = true
