[package]
name = "rlx-bbo"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
description = "Black-box optimization and FMQ/QGBS search (trust-region Q-guidance, arXiv:2605.12416)."
authors.workspace      = true
license.workspace      = true
readme = "README.md"
repository.workspace   = true
homepage.workspace     = true
documentation.workspace = true

[dependencies]
rand       = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
rand_distr = { version = "0.4", default-features = false, features = ["std_math"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
