[package]
name = "rlx-ir"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
description = "Tensor IR for the RLX ML compiler — standalone, serializable, optimizable"
authors.workspace      = true
license.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
repository.workspace   = true
homepage.workspace     = true
documentation.workspace = true
[dependencies]
smallvec = "1"

[dev-dependencies]

[lints]
workspace = true
