[package]
name = "rlx-ir"
version                = "0.2.2"
edition.workspace      = true
rust-version.workspace = true
description = "Tensor IR for the RLX ML compiler — standalone, serializable, optimizable"
authors.workspace      = true
license.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
repository.workspace   = true
homepage.workspace     = true
documentation.workspace = true
[dependencies]
smallvec = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
serialize = ["dep:serde", "dep:serde_json"]

[dev-dependencies]

[lints]
workspace = true
